Remove extra padding from Approval Dashboard (No issue) (#1319)
* Remove extra padding from Approval Dashboard

No issue

* More specific css selector

--- a/src/containers/certification-dashboard/certification-dashboard.scss
+++ b/src/containers/certification-dashboard/certification-dashboard.scss
@@ -1,10 +1,10 @@
-.certification-dasboard {
-  .toolbar {
-    padding-bottom: 16px;
-    display: flex;
-    justify-content: space-between;
-  }
+.certification-dashboard-toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.certification-dasboard {
   .footer {
     padding-top: 16px;
   }
